--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "firebase": "^4.7.0",
+    "firebaseui": "^2.5.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuefire": "^1.4.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
